<resources>
    <string name="app_name">Sendbird Sample</string>

    <!-- all -->
    <string name="all_app_version">Sample UI v%1$s / SDK v%2$s</string>

    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>

    <string name="all_group_channels">Group Channels</string>
    <string name="all_open_channels">Open Channels</string>

    <!-- main -->
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="select_channel_type">Select channel type</string>
    <string name="settings">Settings</string>
    <string name="blocked_members_list">Blocked members</string>

    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <!-- login -->
    <string name="login_user_id">User ID</string>
    <string name="login_user_nickname">Nickname</string>
    <string name="login_connect">Connect</string>
    <string name="login_disconnect">Disconnect</string>

    <!-- Open Channel List -->
    <string name="open_channel_list_participant_count">%1$d participants</string>

    <string name="create_open_channel">Create Open Channel</string>
    <string name="participant_list">Participants</string>

    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>

    <string name="create_group_channel">Create Group Channel</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>

    <string name="member_info"></string>

    <!-- Group Channel -->
    <string name="user_typing">%s is typing</string>
    <string name="two_users_typing">%s and %s are typing</string>
    <string name="users_typing"> Multiple users are typing</string>

    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->
    <string name="action_create_channel">Create channel</string>

    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>
    <string name="upload_file">Upload file</string>
    <string name="write_a_reply">Write a reply...</string>
    <string name="gallery">Gallery</string>
    <string name="congratulations">Congratulations</string>
    <string name="camera">Camera</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="mathematics">Mathematics</string>
    <string name="on_boarding_fragment_first_main">Get smarter\nmuch faster</string>
    <string name="on_boarding_fragment_third_sub">uLesson learning is personalised\nand customized to fit your needs</string>
    <string name="empty" />
    <string name="tutor_is_ready">Your tutor is ready!</string>
    <string name="join_chat">Join the chat session</string>
    <string name="sample_question">Use logarithms to solve the equation 25r = 32 x1, given the answer correct to 3 significant figures.</string>
    <string name="sample_question2">What is biology</string>
    <string name="join">JOIN</string>
    <string name="no_tutor">No tutor available</string>
    <string name="retry_for_tutor">Retry to get connected to another tutor</string>
    <string name="retry">RETRY</string>
    <string name="back">BACK</string>
    <string name="connection_error">Connection Error</string>
    <string name="error_connecting">There was an error connecting you to a tutor</string>
    <string name="see_all"><u>See all</u></string>
    <string name="you_have_no_session">You have no session</string>
    <string name="accept_a_question_to_start_a_session">Accept a question to start a session</string>

    <string name="end_chat_positive_btn_txt">RESUME</string>
    <string name="quit">QUIT</string>
    <string name="session_over">Session Over</string>
    <string name="back_to_timeline">back to timeline</string>



    <string name="close">CLOSE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="record_audio">Record Audio</string>

</resources>
